--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -4,11 +4,11 @@
 
 /* Apply Inter font globally */
 * {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 body {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
